# rt-multiplatform-blur

./: CMakeLists.txt  README.md  blur.cpp  blur.hpp
blur/: platform.hpp
blur/cpu/: cpu.cpp
blur/gpu/: gpu.cpp
blur/gpu/shaders/: shaders.hpp
demo/: demo_blur.cpp  demo_blur.h  desktop_main.cpp
demo/examples/: imgui_examples.cpp  opengl_examples.cpp
